# api-rest-rust

./: .env.example  .env.template  .gitignore  API_EXAMPLES.md  AUTH.md  Cargo.toml  ERROR_RESPONSES.md  Makefile  New Collection.postman_collection.json  README.md  ROUTES.md  docker-compose.yml  init.sql  test_api.sh
mds/: API_EXAMPLES.md  EXPECTED_RESPONSES.md  RATE_LIMITING.md  ROUTES.md
migrations/: 20231201000001_create_users_table.down.sql  20231201000001_create_users_table.up.sql  20231202000001_add_role_to_users.down.sql  20231202000001_add_role_to_users.up.sql  20231202000002_create_admin_user.down.sql  20231202000002_create_admin_user.up.sql
src/: main.rs  telemetry.rs
src/config/: database.rs
src/handlers/: auth_handler.rs  user_handler.rs
src/middleware/: auth.rs  error_handler.rs  mod.rs  rate_limit.rs
src/models/: auth.rs  user.rs
tests/: test_rate_limit.sh
