[package]
name = "api-rest-rust"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.4"
tokio = { version = "1.35", features = ["full"] }
sqlx = { version = "0.8.6", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dotenv = "0.15"
uuid = { version = "1.6", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
bcrypt = "0.15"
anyhow = "1.0"
env_logger = "0.10"
jsonwebtoken = "9.2"
actix-web-httpauth = "0.8"
governor = "0.6"
nonzero_ext = "0.3"
futures = "0.3"
rand = "0.8"
actix-web-lab = "0.20"

# OpenTelemetry and tracing
opentelemetry = { version = "0.22" }
opentelemetry-otlp = { version = "0.15", features = ["grpc-tonic", "trace"] }
opentelemetry_sdk = { version = "0.22", features = ["rt-tokio"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-opentelemetry = "0.23"
tracing-actix-web = "0.7"
